@@ -1607,7 +1607,22 @@ alloc_job:
 			avail_mem = select_node_record[i].real_memory -
 				select_node_record[i].mem_spec_limit;
 			if (save_mem & MEM_PER_CPU) {	/* Memory per CPU */
-				needed_mem = job_res->cpus[j] *
+				uint16_t cpu_count = job_res->cpus[j];
+				/*
+				 * If the job requested less threads that we
+				 * allocated but requested memory based on cpu
+				 * count we would need to adjust that to avoid
+				 * getting more memory than we are actually
+				 * expecting.
+				 */
+				if (job_ptr->details->mc_ptr->threads_per_core <
+				    select_node_record[i].vpus) {
+					cpu_count /= select_node_record[i].vpus;
+					cpu_count *= job_ptr->details->
+						mc_ptr->threads_per_core;
+				}
+
+				needed_mem = cpu_count *
 					(save_mem & (~MEM_PER_CPU));
 			} else if (save_mem) {		/* Memory per node */
 				needed_mem = save_mem;
